--- a/Entrega_grupo_05/index.html
+++ b/Entrega_grupo_05/index.html
@@ -397,7 +397,7 @@
   <footer class="container">
     <div class="row border-top py-5 justify-content-between align-items-center">
       <div class="col-auto">
-        <h1 class="lead">On Celular</h1>
+        <img src="img/logo.png" width = "110" alt="One celular"> 
         <a href="#" class="btn btn-link">Acerca de</a>
         <a href="#" class="btn btn-link">Contacto</a>
       </div>
