--- a/index.html
+++ b/index.html
@@ -486,11 +486,11 @@
   </section>
 </div>
 
-
+<div class="container">
   <section class="mapa">
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d53559.31107834028!2d-68.82611897151969!3d-32.96534432432616!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x967e0c960c574809%3A0x57621966b9559a27!2zTWFpcMO6LCBNZW5kb3ph!5e0!3m2!1ses-419!2sar!4v1681914219545!5m2!1ses-419!2sar" width="1600" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
   </section>
-
+</div>
   <!--Fin de Ubicación-->
 
 <!--Footer-->
